--- a/tex_project/Part 2 Project Proposal Paper/05_MiningTheUSTechnologistsData_Part2.tex
+++ b/tex_project/Part 2 Project Proposal Paper/05_MiningTheUSTechnologistsData_Part2.tex
@@ -2,7 +2,7 @@
 
 %\usepackage{booktabs} % For formal tables
 
-
+\usepackage{hyperref}
 % Copyright
 %\setcopyright{none}
 %\setcopyright{acmcopyright}
@@ -48,9 +48,19 @@
 		\state{CO} 
 		\postcode{80111}
 	}
-	\email{abtu8803@colorado.edu}
+	\email{abulitibu.tuguluke@dhigroupinc.com}
 	
-
+	\author{Abulitibu Tuguluke}
+%	\authornote{MS student at CU Boulder}
+%	\orcid{1234-5678-9012}
+\affiliation{%
+	\institution{Department of Computer Science, CU  Boulder}
+	\streetaddress{430 UCB, 1111 Engineering Dr,}
+	\city{Boulder} 
+	\state{CO} 
+	\postcode{80309}
+}
+\email{abtu8803@colorado.edu}
 	
 	\maketitle
 	
