--- a/tex_project/Part 4 Project Final Report/projectbody-conf.tex
+++ b/tex_project/Part 4 Project Final Report/projectbody-conf.tex
@@ -5,16 +5,24 @@
 \section{Introduction} 
  Description of your question(s) Why they are important
 \section{Related Work}
+Before this project, my personal interest are skill sets and knowledge graph for each skills. What I did was to use POS to set up skill key words and training on 1000 data set, so that to get the labeling for new data set working pretty well, afterward, I clustering multiple job description for certain job titles and found the common  skill words for each job. 
 \section{Data Set}
 Where from
 Attribute features
-etc.
+etc.\\
+My approach for this project to apply a simple ML algorithm to a messy data, and not applying a complicated algorithm to a relatively nice data\footnote{I probably will do that in the Neural Net and Deep Learning class this fall.} Because personally, I just want to learning how to scrape and mining mutiple messy data and combine the knowledge. 
+\subsection{EDA}
 \section{Main Techniques Applied}
 Data clean/preprocess/etc.
 Data Warehouse/cube/etc.
 Classification/Clustering/etc.
+\subsection{Data scrapping}
+\subsection{Data cleaning}
+\subsection{Fuzzy matching}
+
 \section{Key Results}
 What did you discover/learn?
+\subsection{BLS data set}
 \section{Applications}
 How can the knowledge gained be applied?
 \section{ [Optional Extra Credit] Visualization}
